force-app/main/default/objects/Conversation__c/Conversation__c.object-meta.xml
<CustomObject>
    <label>Conversation</label>
    <nameField>
        <displayFormat>Conversation #{00000}</displayFormat>
        <label>Conversation No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conversations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>