force-app/main/default/objects/Conversation__c/fields/ChannelRef__c.field-meta.xml
<CustomField>
    <fullName>ChannelRef__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Channel</label>
    <referenceTo>ConversationChannel__c</referenceTo>
    <relationshipLabel>Conversations</relationshipLabel>
    <relationshipName>Conversations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>