force-app/main/default/objects/Conversation__c/fields/ConversationId__c.field-meta.xml
<CustomField>
    <fullName>ConversationId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Message Bird Conversation ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>