force-app/main/default/objects/Conversation__c/fields/RelatedEntityRef__c.field-meta.xml
<CustomField>
    <fullName>RelatedEntityRef__c</fullName>
    <externalId>true</externalId>
    <label>Related Entity ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>